NetBSD Problem Report #41870

From martin@aprisoft.de  Mon Aug 10 17:02:04 2009
Return-Path: <martin@aprisoft.de>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id F096A63C27D
	for <gnats-bugs@gnats.NetBSD.org>; Mon, 10 Aug 2009 17:02:03 +0000 (UTC)
Message-Id: <20090810170156.3744EAF5817@emmas.aprisoft.de>
Date: Mon, 10 Aug 2009 19:01:56 +0200 (CEST)
From: martin@NetBSD.org
Reply-To: martin@NetBSD.org
To: gnats-bugs@gnats.NetBSD.org
Subject: sparc/sparc64 X -configure is missing output
X-Send-Pr-Version: 3.95

>Number:         41870
>Category:       xsrc
>Synopsis:       sparc/sparc64 X -configure is missing output
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    xsrc-manager
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Aug 10 17:05:00 +0000 2009
>Closed-Date:    Sat Feb 01 18:55:51 +0000 2014
>Last-Modified:  Sat Feb 01 18:55:51 +0000 2014
>Originator:     Martin Husemann
>Release:        NetBSD 5.99.15
>Organization:
The NetBSD Foundation, Inc.
>Environment:
System: NetBSD nelly.aprisoft.de 5.99.15 NetBSD 5.99.15 (NELLY.MP) #65: Mon Aug 10 10:44:06 CEST 2009 martin@emmas.aprisoft.de:/nelly/usr/src/sys/arch/sparc64/compile/NELLY.MP sparc64
Architecture: sparc64
Machine: sparc64
>Description:

If you configure a new machine with X by doing

  X -configure

you will notice two obvious, completely stupid bugs. They are upstream
bugs, but we will have to fix it in our tree anyway, even if upstream
does not care.

After above call, do tail /var/log/Xorg.0.log and you will see:

> Your xorg.conf file is /root/xorg.conf.new
> 
> To test the server, run 'X -config /root/xorg.conf.new'

Unfortunately these are not printed to stderr any more, as they used to
be with XFree86. *Sigh*

But even worse, if you should be able to find the hint and follow it, you
will get (if everything works well) a completely black screen with no mouse
cursor.

That is an absolutely unacceptable user interface ;-}

If you should happen to know what's going on and log in via network (or 
another console) and run "xterm -display :0" there, the xterm pops up and
works, and the mouse pointer becomes visible.

>How-To-Repeat:
s/a

>Fix:
definitively

>Release-Note:

>Audit-Trail:

From: Martin Husemann <martin@duskware.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: xsrc/41870: black X display
Date: Tue, 11 Aug 2009 10:10:08 +0200

 It has been pointed out to me that
  - the default background should not be black accoding to dix/window.c
  - this looks more like a 'no video' problem

 So I tested:  X -wr -config /root/xorg.conf.new

 and indeed it comes up with a pure white display, no mouse visible.
 Again it is possible to start an xterm, and the server starts to act sane
 then.

 Martin

From: Martin Husemann <martin@duskware.de>
To: gnats-bugs@NetBSD.org
Cc: mrg@NetBSD.org
Subject: Re: xsrc/41870: black X display
Date: Wed, 12 Aug 2009 11:42:51 +0200

 This is also reproducable on amd64 with a radeon pcie card.

 Martin

From: Matthieu Herrb <matthieu.herrb@laas.fr>
To: gnats-bugs@NetBSD.org
Cc: xsrc-manager@NetBSD.org, martin@NetBSD.org
Subject: Re: xsrc/41870: black X display
Date: Wed, 12 Aug 2009 23:33:40 +0200

 Martin Husemann wrote:
 > The following reply was made to PR xsrc/41870; it has been noted by GNATS.
 > 
 > From: Martin Husemann <martin@duskware.de>
 > To: gnats-bugs@NetBSD.org
 > Cc: mrg@NetBSD.org
 > Subject: Re: xsrc/41870: black X display
 > Date: Wed, 12 Aug 2009 11:42:51 +0200
 > 
 >  This is also reproducable on amd64 with a radeon pcie card.
 >  
 >  Martin
 >  

 This is the default behaviour in xserver 1.6: a black root window and no
 cursor unless 1st set by an X application.

 To get the old behaviour, use 'X -retro' or a patch similar to
 <http://xenocara.org/cgit/cgit.cgi/xserver/commit/?h=obsd-server-1.6-branch&id=5d6ae666e5c204832d291b4d367d8273d7110c89>

 -- 
 Matthieu Herrb

From: Martin Husemann <martin@duskware.de>
To: Matthieu Herrb <matthieu.herrb@laas.fr>
Cc: gnats-bugs@NetBSD.org, xsrc-manager@NetBSD.org, martin@NetBSD.org
Subject: Re: xsrc/41870: black X display
Date: Thu, 13 Aug 2009 10:16:18 +0200

 On Wed, Aug 12, 2009 at 11:33:40PM +0200, Matthieu Herrb wrote:
 > This is the default behaviour in xserver 1.6: a black root window and no
 > cursor unless 1st set by an X application.

 Hi Matthieu,

 I don't mind the default in general, but my usability complaint is about
 the interaction with X -configure (which, IIUC, you are considering to
 remove completely).

 Currently the user gets no information what to do at all, and "wrong"
 instructions are logged in /var/log/Xorg.0.log.

 My suggestion would be to print the usage hint to stderr, and to modify
 it to include -retro for now (or another new option to at least show the
 mouse cursor imediately).

 Martin

From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41870 CVS commit: xsrc/external/mit/xorg-server/dist
Date: Mon, 21 Sep 2009 23:40:15 +0000

 Module Name:	xsrc
 Committed By:	snj
 Date:		Mon Sep 21 23:40:14 UTC 2009

 Modified Files:
 	xsrc/external/mit/xorg-server/dist/dix: globals.c
 	xsrc/external/mit/xorg-server/dist/os: utils.c

 Log Message:
 By default, use the old X server background and cursor mode (option
 "-retro").  Add a "-noretro" option to get the new (black background
 and no cursor) behavior.

 Addresses part of PR xsrc/41870


 To generate a diff of this commit:
 cvs rdiff -u -r1.1.1.2 -r1.2 xsrc/external/mit/xorg-server/dist/dix/globals.c
 cvs rdiff -u -r1.1.1.2 -r1.2 xsrc/external/mit/xorg-server/dist/os/utils.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Soren Jacobsen <snj@pobox.com>
To: Martin Husemann <martin@NetBSD.org>
Cc: gnats-bugs@NetBSD.org
Subject: Re: xsrc/41870: Xorg -configure is unusable
Date: Mon, 21 Sep 2009 19:51:13 -0700

 On Aug 10, 2009, at 10:05 AM, martin@NetBSD.org wrote:

 > After above call, do tail /var/log/Xorg.0.log and you will see:
 >
 >> Your xorg.conf file is /root/xorg.conf.new
 >>
 >> To test the server, run 'X -config /root/xorg.conf.new'
 >
 > Unfortunately these are not printed to stderr any more, as they used  
 > to
 > be with XFree86. *Sigh*

 This part of the PR seems to be specific to sparc and sparc64.  It  
 works fine on other ports (tested: i386, macppc), but sparc and  
 sparc64 both fail.  macallan says "we probably block console output as  
 long as the corresponding fb device is open"

 I'm not sure what the fix is, but at least it's not a regression with  
 new X.Org.

 I fixed the other half of this PR earlier today.

From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41870 CVS commit: [netbsd-5] xsrc/external/mit/xorg-server/dist
Date: Sat, 26 Sep 2009 05:22:07 +0000

 Module Name:	xsrc
 Committed By:	snj
 Date:		Sat Sep 26 05:22:07 UTC 2009

 Modified Files:
 	xsrc/external/mit/xorg-server/dist/dix [netbsd-5]: globals.c
 	xsrc/external/mit/xorg-server/dist/os [netbsd-5]: utils.c

 Log Message:
 Pull up following revision(s) (requested by mrg in ticket #1018):
 	external/mit/xorg-server/dist/dix/globals.c: revision 1.2
 	external/mit/xorg-server/dist/os/utils.c: revision 1.2
 By default, use the old X server background and cursor mode (option
 "-retro").  Add a "-noretro" option to get the new (black background
 and no cursor) behavior.

 Addresses part of PR xsrc/41870


 To generate a diff of this commit:
 cvs rdiff -u -r1.1.1.1.2.1 -r1.1.1.1.2.2 \
     xsrc/external/mit/xorg-server/dist/dix/globals.c
 cvs rdiff -u -r1.1.1.1.2.1 -r1.1.1.1.2.2 \
     xsrc/external/mit/xorg-server/dist/os/utils.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Sat, 01 Feb 2014 18:55:51 +0000
State-Changed-Why:
We fixed this localy


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.