By default, use the old X server background and cursor mode (option "-retro").  Add a "-noretro" option to get the new (black background and no cursor) behavior.

Addresses part of PR xsrc/41870