external/mit/xorg-server/dist/os/utils.c
@@ -525,6 +525,7 @@ void UseMsg(void)
     ErrorF("-render [default|mono|gray|color] set render color alloc policy\n");
 #endif
     ErrorF("-retro                 start with classic stipple and cursor\n");
+    ErrorF("-noretro               start with black background and no cursor\n");
     ErrorF("-s #                   screen-saver timeout (minutes)\n");
     ErrorF("-t #                   mouse threshold (pixels)\n");
     ErrorF("-terminate             terminate at server reset\n");
@@ -821,6 +822,8 @@ ProcessCommandLine(int argc, char *argv[])
 	    defaultKeyboardControl.autoRepeat = FALSE;
 	else if ( strcmp( argv[i], "-retro") == 0)
 	    party_like_its_1989 = TRUE;
+	else if ( strcmp( argv[i], "-noretro") == 0)
+	    party_like_its_1989 = FALSE;
 	else if ( strcmp( argv[i], "-s") == 0)
 	{
 	    if(++i < argc)
